--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="180dp"
         android:src="@drawable/logoa"
         android:layout_marginTop="20dp"
-        android:layout_marginRight="100dp">
+        android:layout_marginEnd="100dp">
     </ImageView>
 
     <EditText
@@ -28,7 +28,7 @@
         android:layout_height="80dp"
         android:inputType="text"
         android:layout_marginTop="10dp"
-        />
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/edtemail"
@@ -42,7 +42,7 @@
         android:layout_height="65dp"
         android:inputType="textEmailAddress"
         android:layout_marginTop="5dp"
-        />
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/edtnumberPhone"
@@ -56,7 +56,7 @@
         android:layout_height="65dp"
         android:inputType="number"
         android:layout_marginTop="5dp"
-        />
+        android:autofillHints="" />
 
     <Button
         android:id="@+id/btnLogin"
